# claude-code-viewer

./: .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md
.claude/skills/: investment-research.md
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml  requirements.txt  system_prompt.md  user_info.md
backend/app/: __init__.py  agents.py  config.py  main.py  models.py  ws.py
backend/app/agents/: __init__.py  claude_code_agent.py
backend/app/api/: __init__.py  process_stream.py
backend/app/sdk/: __init__.py  client.py
certs/: generate-certs.sh
docs/: architecture.md  backend.md  configuration.md  copilotkit-integration.md  data-flow.md  frontend.md  index.md  mcp.md  runtime.md  todoUpdate.md
docs/superpowers/plans/: 2026-03-27-claude-code-viewer-redesign.md  2026-03-28-claude-code-cli-integration.md
docs/superpowers/specs/: 2026-03-28-claude-code-cli-integration-design.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.runtime  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/server/: copilotkit-runtime.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CopilotChat.tsx  PermissionDialog.tsx  PhoneFrame.tsx  ProcessPanel.tsx  SelectionCard.tsx  SummaryCard.tsx  SystemPromptPanel.tsx
frontend/src/hooks/: useProcessStream.ts  useWebSocket.ts
frontend/src/types/: messages.ts
