[project]
name = "claude-code-viewer-backend"
version = "0.1.0"
description = "Claude Code Viewer Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "claude-agent-sdk>=0.1.0",
    "copilotkit>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
